--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
-.Savings {
-  text-align: center;
+html body {
+  background-color: grey;
 }
-
 body {
   margin: 0;
-  padding: 10px;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
